complete nav bar

--- a/index.html
+++ b/index.html
@@ -7,8 +7,35 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&family=Rubik:wght@500&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/55c14097f3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="nav_header">
+            <h2>Rockybul</h2>
+            <div class="dots">
+                <div class="dot 1"></div>
+                <div class="dot 2"></div>
+                <div class="dot 3"></div>
+            </div>
+        </div>
+        <div class="nav-lists">
+            <li class="home">
+                <i class="fa-solid fa-house "></i> home
+            </li>
+            <li class="html">
+                <i class="fa-brands fa-html5"></i>html
+            </li>
+            <li class="css">
+                <i class="fa-brands fa-css3-alt"></i>css
+            </li>
+            <li class="html">
+                <i class="fa-brands fa-js"></i>js
+            </li>
+        </div>
+    </nav>
 </body>
 </html>
