working with css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="dot 3"></div>
             </div>
         </div>
-        <div class="nav-lists">
+        <div class="nav_lists">
             <li class="home">
                 <i class="fa-solid fa-house "></i> home
             </li>
@@ -37,5 +37,8 @@
             </li>
         </div>
     </nav>
+    <header>
+        <img src="./images/image.jpg" alt="img">
+    </header>
 </body>
 </html>
