--- a/index.html
+++ b/index.html
@@ -23,22 +23,23 @@
             </div>
         </div>
         <div class="nav_lists">
-            <li class="home">
+            <a href="#" class="home">
                 <i class="fa-solid fa-house "></i> home
-            </li>
-            <li class="html">
-                <i class="fa-brands fa-html5"></i>html
-            </li>
-            <li class="css">
-                <i class="fa-brands fa-css3-alt"></i>css
-            </li>
-            <li class="html">
-                <i class="fa-brands fa-js"></i>js
-            </li>
+            </a>
+
+            <a href="#" class="html">
+                <i class="fa-brands fa-html5"></i> html
+            </a >
+
+            <a href="#" class="css">
+                <i class="fa-brands fa-css3-alt"></i> css
+            </a>
+            <a href="https://www.javascript.info" class="js">
+                <i class="fa-brands fa-js"></i> js
+            </a>
         </div>
     </nav>
     <header>
-        <img src="./images/image.jpg" alt="img">
     </header>
 </body>
 </html>
